// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Accepts a message
  rpc NewMessage (NewMessageContent) returns (NewMessageSendingResult) {}

  // Subscribes to a stream of messages
  rpc SubscribeToMessages(RequestedChatInfo) returns (stream BroadcastedMessage) {}
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
// The response message containing the greetings and the comma-separated list of names in the chat
message HelloReply {
  string motd = 1;
  string namesInChat = 2;
}

message RequestedChatInfo {
  string chatName = 1;
}

message NewMessageContent {
  string text = 1;
}
message NewMessageSendingResult {
  bool success = 1;
}

message BroadcastedMessage {
  string sender = 1;
  string text = 2;
}


